--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="ored\portfolio\optionwrapper.hpp" />
     <ClInclude Include="ored\portfolio\portfolio.hpp" />
     <ClInclude Include="ored\portfolio\referencedata.hpp" />
+    <ClInclude Include="ored\portfolio\referencedatafactory.hpp" />
     <ClInclude Include="ored\portfolio\schedule.hpp" />
     <ClInclude Include="ored\portfolio\structuredtradeerror.hpp" />
     <ClInclude Include="ored\portfolio\swap.hpp" />
@@ -292,6 +293,7 @@
     <ClCompile Include="ored\portfolio\optionwrapper.cpp" />
     <ClCompile Include="ored\portfolio\portfolio.cpp" />
     <ClCompile Include="ored\portfolio\referencedata.cpp" />
+    <ClCompile Include="ored\portfolio\referencedatafactory.cpp" />
     <ClCompile Include="ored\portfolio\schedule.cpp" />
     <ClCompile Include="ored\portfolio\swap.cpp" />
     <ClCompile Include="ored\portfolio\swaption.cpp" />
