[touch:1098]first cut at fitted bond curves, park this until ReferenceDataManager is migrated to ORE in ticket 1035

--- a/OREData/ored/CMakeLists.txt
+++ b/OREData/ored/CMakeLists.txt
@@ -32,6 +32,7 @@ marketdata/defaultcurve.cpp
 marketdata/equitycurve.cpp
 marketdata/equityvolcurve.cpp
 marketdata/expiry.cpp
+marketdata/fittedbondcurvehelpermarket.cpp
 marketdata/fixings.cpp
 marketdata/fxspot.cpp
 marketdata/fxtriangulation.cpp
@@ -162,6 +163,7 @@ marketdata/defaultcurve.hpp
 marketdata/equitycurve.hpp
 marketdata/equityvolcurve.hpp
 marketdata/expiry.hpp
+marketdata/fittedbondcurvehelpermarket.hpp
 marketdata/fixings.hpp
 marketdata/fxspot.hpp
 marketdata/fxtriangulation.hpp
