--- a/Docker/docker-compose-quantlib-debug.yml
+++ b/Docker/docker-compose-quantlib-debug.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib_debug:
-    image: env_quantlib_debug:1.14_68da2c580
+    image: env_quantlib_debug:1.14_850e91041
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib-Debug
