--- a/OREData/test/OREDataTestSuite.vcxproj
+++ b/OREData/test/OREDataTestSuite.vcxproj
@@ -660,6 +660,7 @@
     <ClCompile Include="equityswap.cpp" />
     <ClCompile Include="equitytrades.cpp" />
     <ClCompile Include="expiry.cpp" />
+    <ClCompile Include="fittedbondcurve.cpp" />
     <ClCompile Include="fixings.cpp" />
     <ClCompile Include="fxoption.cpp" />
     <ClCompile Include="fxswap.cpp" />
