change equity index constituent call

--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -489,6 +489,8 @@
     <ClInclude Include="ored\portfolio\underlying.hpp">
       <Filter>portfolio</Filter>
     </ClInclude>
+    <ClInclude Include="ored\portfolio\bondutils.hpp" />
+    <ClInclude Include="ored\marketdata\fittedbondcurvehelpermarket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -860,5 +862,7 @@
     <ClCompile Include="ored\portfolio\underlying.cpp">
       <Filter>portfolio</Filter>
     </ClCompile>
+    <ClCompile Include="ored\portfolio\bondutils.cpp" />
+    <ClCompile Include="ored\marketdata\fittedbondcurvehelpermarket.cpp" />
   </ItemGroup>
 </Project>
