--- a/Docker/docker-compose-quantlib-debug.yml
+++ b/Docker/docker-compose-quantlib-debug.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib_debug:
-    image: env_quantlib_debug:1.14_0842bbcd4
+    image: env_quantlib_debug:1.14_c8d6abbbb
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib-Debug
