--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.14_0842bbcd4
+    image: env_quantlib:1.14_c8d6abbbb
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
