[Touch:1047]Add structured analytics error.

--- a/OREAnalytics/OREAnalytics.vcxproj
+++ b/OREAnalytics/OREAnalytics.vcxproj
@@ -42,6 +42,7 @@
     <ClInclude Include="orea\app\parameters.hpp" />
     <ClInclude Include="orea\app\reportwriter.hpp" />
     <ClInclude Include="orea\app\sensitivityrunner.hpp" />
+    <ClInclude Include="orea\app\structuredanalyticserror.hpp" />
     <ClInclude Include="orea\auto_link.hpp" />
     <ClInclude Include="orea\cube\cubewriter.hpp" />
     <ClInclude Include="orea\cube\inmemorycube.hpp" />
@@ -94,6 +95,7 @@
     <ClCompile Include="orea\app\parameters.cpp" />
     <ClCompile Include="orea\app\reportwriter.cpp" />
     <ClCompile Include="orea\app\sensitivityrunner.cpp" />
+    <ClCompile Include="orea\app\structuredanalyticserror.cpp" />
     <ClCompile Include="orea\cube\cubewriter.cpp" />
     <ClCompile Include="orea\cube\sensitivitycube.cpp" />
     <ClCompile Include="orea\engine\filteredsensitivitystream.cpp" />
