--- a/OREAnalytics/orea/CMakeLists.txt
+++ b/OREAnalytics/orea/CMakeLists.txt
@@ -7,6 +7,7 @@ app/oreapp.cpp
 app/parameters.cpp
 app/reportwriter.cpp
 app/sensitivityrunner.cpp
+app/structuredanalyticserror.cpp
 cube/cubewriter.cpp
 cube/sensitivitycube.cpp
 engine/filteredsensitivitystream.cpp
@@ -48,6 +49,7 @@ app/oreapp.hpp
 app/parameters.hpp
 app/reportwriter.hpp
 app/sensitivityrunner.hpp
+app/structuredanalyticserror.hpp
 auto_link.hpp
 cube/cubewriter.hpp
 cube/inmemorycube.hpp
