--- a/OREAnalytics/OREAnalytics.vcxproj.filters
+++ b/OREAnalytics/OREAnalytics.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClInclude Include="orea\engine\filteredsensitivitystream.hpp">
       <Filter>engine</Filter>
     </ClInclude>
+    <ClInclude Include="orea\app\structuredanalyticserror.hpp">
+      <Filter>app</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="orea\aggregation\collateralaccount.cpp">
@@ -282,6 +285,9 @@
     </ClCompile>
     <ClCompile Include="orea\engine\filteredsensitivitystream.cpp">
       <Filter>engine</Filter>
+    </ClCompile>
+    <ClCompile Include="orea\app\structuredanalyticserror.cpp">
+      <Filter>app</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
