--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="ored\portfolio\fxforward.hpp" />
     <ClInclude Include="ored\portfolio\fxoption.hpp" />
     <ClInclude Include="ored\portfolio\fxswap.hpp" />
+    <ClInclude Include="ored\portfolio\indexing.hpp" />
     <ClInclude Include="ored\portfolio\instrumentwrapper.hpp" />
     <ClInclude Include="ored\portfolio\legbuilders.hpp" />
     <ClInclude Include="ored\portfolio\legdata.hpp" />
@@ -287,6 +288,7 @@
     <ClCompile Include="ored\portfolio\fxforward.cpp" />
     <ClCompile Include="ored\portfolio\fxoption.cpp" />
     <ClCompile Include="ored\portfolio\fxswap.cpp" />
+    <ClCompile Include="ored\portfolio\indexing.cpp" />
     <ClCompile Include="ored\portfolio\legbuilders.cpp" />
     <ClCompile Include="ored\portfolio\legdata.cpp" />
     <ClCompile Include="ored\portfolio\legdatafactory.cpp" />
