adjust to QuantLib 1.18, five regression test and one oreap-test-suite failures to investigate

--- a/Docker/docker-compose-ore.yml
+++ b/Docker/docker-compose-ore.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE
       args:
-        - quantlib_version=1.14_0c8eed921
+        - quantlib_version=1.18_1df6081f
         - num_cores=16
