--- a/Docker/docker-compose-quantlib-debug.yml
+++ b/Docker/docker-compose-quantlib-debug.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib_debug:
-    image: env_quantlib_debug:1.14_0c8eed921
+    image: env_quantlib_debug:1.18_1df6081f
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib-Debug
