--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="ored\utilities\flowanalysis.hpp" />
     <ClInclude Include="ored\utilities\indexparser.hpp" />
     <ClInclude Include="ored\utilities\log.hpp" />
+    <ClInclude Include="ored\utilities\marketdata.hpp" />
     <ClInclude Include="ored\utilities\osutils.hpp" />
     <ClInclude Include="ored\utilities\parsers.hpp" />
     <ClInclude Include="ored\utilities\progressbar.hpp" />
@@ -318,6 +319,7 @@
     <ClCompile Include="ored\utilities\flowanalysis.cpp" />
     <ClCompile Include="ored\utilities\indexparser.cpp" />
     <ClCompile Include="ored\utilities\log.cpp" />
+    <ClCompile Include="ored\utilities\marketdata.cpp" />
     <ClCompile Include="ored\utilities\osutils.cpp" />
     <ClCompile Include="ored\utilities\parsers.cpp" />
     <ClCompile Include="ored\utilities\progressbar.cpp" />
